; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_dev_set_default.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_dev_set_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@EBUSY = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@dndev_lock = common dso_local global i32 0, align 4
@decnet_default_device = common dso_local global %struct.net_device* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dn_dev_set_default(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.net_device* null, %struct.net_device** %6, align 8
  %8 = load i32, i32* @EBUSY, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %7, align 4
  %10 = load %struct.net_device*, %struct.net_device** %4, align 8
  %11 = getelementptr inbounds %struct.net_device, %struct.net_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @ENODEV, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %36

17:                                               ; preds = %2
  %18 = call i32 @write_lock(i32* @dndev_lock)
  %19 = load i32, i32* %5, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %17
  %22 = load %struct.net_device*, %struct.net_device** @decnet_default_device, align 8
  %23 = icmp eq %struct.net_device* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %21, %17
  %25 = load %struct.net_device*, %struct.net_device** @decnet_default_device, align 8
  store %struct.net_device* %25, %struct.net_device** %6, align 8
  %26 = load %struct.net_device*, %struct.net_device** %4, align 8
  store %struct.net_device* %26, %struct.net_device** @decnet_default_device, align 8
  store i32 0, i32* %7, align 4
  br label %27

27:                                               ; preds = %24, %21
  %28 = call i32 @write_unlock(i32* @dndev_lock)
  %29 = load %struct.net_device*, %struct.net_device** %6, align 8
  %30 = icmp ne %struct.net_device* %29, null
  br i1 %30, label %31, label %34

31:                                               ; preds = %27
  %32 = load %struct.net_device*, %struct.net_device** %6, align 8
  %33 = call i32 @dev_put(%struct.net_device* %32)
  br label %34

34:                                               ; preds = %31, %27
  %35 = load i32, i32* %7, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %34, %14
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @write_unlock(i32*) #1

declare dso_local i32 @dev_put(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
